GearsetPOC/force-app/main/default/objects/Request__c/Request__c.object-meta.xml
<CustomObject>
    <description>Stores all request informations whicha re placed</description>
    <label>Vendor_Request</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RequestId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>