GearsetPOC/force-app/main/default/objects/Request__c/fields/annual_spend_numeric__c.field-meta.xml
<CustomField>
    <fullName>annual_spend_numeric__c</fullName>
    <description>This is a filed created for reporting purpose. This converts annual spend to numeric value.</description>
    <formula>VALUE(annualspend__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual spend in numeric format</inlineHelpText>
    <label>annual_spend_numeric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>