GearsetPOC/force-app/main/default/objects/Request__c/fields/approvedcontract__c.field-meta.xml
<CustomField>
    <fullName>approvedcontract__c</fullName>
    <description>Approved Contract</description>
    <inlineHelpText>Approved Contract</inlineHelpText>
    <label>approvedcontract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>PO Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>