GearsetPOC/force-app/main/default/objects/Request__c/fields/approver__c.field-meta.xml
<CustomField>
    <fullName>approver__c</fullName>
    <description>approver</description>
    <inlineHelpText>approver</inlineHelpText>
    <label>approver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>