GearsetPOC/force-app/main/default/objects/Request__c/fields/bank__c.field-meta.xml
<CustomField>
    <fullName>bank__c</fullName>
    <description>Which bank?</description>
    <inlineHelpText>bank</inlineHelpText>
    <label>bank</label>
    <length>10</length>
    <type>Text</type>
</CustomField>