GearsetPOC/force-app/main/default/objects/Request__c/fields/bank_details__c.field-meta.xml
<CustomField>
    <fullName>bank_details__c</fullName>
    <description>URL for storing bank details in pdf</description>
    <label>bank_details</label>
    <type>Url</type>
</CustomField>