GearsetPOC/force-app/main/default/objects/Request__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <description>category</description>
    <inlineHelpText>category</inlineHelpText>
    <label>category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>