GearsetPOC/force-app/main/default/objects/Request__c/fields/comments__c.field-meta.xml
<CustomField>
    <fullName>comments__c</fullName>
    <description>comments</description>
    <inlineHelpText>comments</inlineHelpText>
    <label>comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>