GearsetPOC/force-app/main/default/objects/Request__c/fields/compregno__c.field-meta.xml
<CustomField>
    <fullName>compregno__c</fullName>
    <description>comp regno</description>
    <inlineHelpText>comp regno</inlineHelpText>
    <label>compregno</label>
    <length>30</length>
    <type>Text</type>
</CustomField>