GearsetPOC/force-app/main/default/objects/Request__c/fields/contactemail__c.field-meta.xml
<CustomField>
    <fullName>contactemail__c</fullName>
    <description>Contat email</description>
    <label>contactemail</label>
    <type>Email</type>
</CustomField>