GearsetPOC/force-app/main/default/objects/Request__c/fields/contactname__c.field-meta.xml
<CustomField>
    <fullName>contactname__c</fullName>
    <description>Relationship manager name</description>
    <inlineHelpText>Relationship manager name</inlineHelpText>
    <label>contactname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>