GearsetPOC/force-app/main/default/objects/Request__c/fields/contractapproved__c.field-meta.xml
<CustomField>
    <fullName>contractapproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>contract approved?</description>
    <inlineHelpText>contract approved?</inlineHelpText>
    <label>contractapproved</label>
    <type>Checkbox</type>
</CustomField>