GearsetPOC/force-app/main/default/objects/Request__c/fields/contrefno__c.field-meta.xml
<CustomField>
    <fullName>contrefno__c</fullName>
    <description>Contract Ref No</description>
    <inlineHelpText>Contract Ref No</inlineHelpText>
    <label>contrefno</label>
    <length>30</length>
    <type>Text</type>
</CustomField>