GearsetPOC/force-app/main/default/objects/Request__c/fields/coraddress1__c.field-meta.xml
<CustomField>
    <fullName>coraddress1__c</fullName>
    <description>Correspondence Address Line 1</description>
    <label>coraddress1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>