GearsetPOC/force-app/main/default/objects/Request__c/fields/coraddress2__c.field-meta.xml
<CustomField>
    <fullName>coraddress2__c</fullName>
    <description>Correspondence address line2</description>
    <label>coraddress2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>