GearsetPOC/force-app/main/default/objects/Request__c/fields/coraddress__c.field-meta.xml
<CustomField>
    <fullName>coraddress__c</fullName>
    <description>Correspondence address</description>
    <inlineHelpText>Correspondence address</inlineHelpText>
    <label>coraddress</label>
    <type>TextArea</type>
</CustomField>