GearsetPOC/force-app/main/default/objects/Request__c/fields/corcity__c.field-meta.xml
<CustomField>
    <fullName>corcity__c</fullName>
    <label>corcity</label>
    <length>35</length>
    <type>Text</type>
</CustomField>