GearsetPOC/force-app/main/default/objects/Request__c/fields/corcounty__c.field-meta.xml
<CustomField>
    <fullName>corcounty__c</fullName>
    <label>corcounty</label>
    <length>35</length>
    <type>Text</type>
</CustomField>