GearsetPOC/force-app/main/default/objects/Request__c/fields/corfax__c.field-meta.xml
<CustomField>
    <fullName>corfax__c</fullName>
    <label>corfax</label>
    <length>20</length>
    <type>Text</type>
</CustomField>