GearsetPOC/force-app/main/default/objects/Request__c/fields/corrzipcode__c.field-meta.xml
<CustomField>
    <fullName>corrzipcode__c</fullName>
    <description>Correspondence zip code</description>
    <label>corrzipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>