GearsetPOC/force-app/main/default/objects/Request__c/fields/corstate__c.field-meta.xml
<CustomField>
    <fullName>corstate__c</fullName>
    <label>corstate</label>
    <length>35</length>
    <type>Text</type>
</CustomField>