GearsetPOC/force-app/main/default/objects/Request__c/fields/corzipcode__c.field-meta.xml
<CustomField>
    <fullName>corzipcode__c</fullName>
    <description>Correspondence postal code</description>
    <label>corzipcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>