GearsetPOC/force-app/main/default/objects/Request__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <description>country</description>
    <inlineHelpText>country</inlineHelpText>
    <label>country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>