GearsetPOC/force-app/main/default/objects/Request__c/fields/customer_accountnumber1__c.field-meta.xml
<CustomField>
    <fullName>customer_accountnumber1__c</fullName>
    <description>To store customer account number</description>
    <label>customer_accountnumber1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>