GearsetPOC/force-app/main/default/objects/Request__c/fields/customer_id__c.field-meta.xml
<CustomField>
    <fullName>customer_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up for customer id in invoice customer</description>
    <label>Invoice_Customer</label>
    <referenceTo>Invoice_Customer__c</referenceTo>
    <relationshipLabel>Vendor_Requests</relationshipLabel>
    <relationshipName>Vendor_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>