GearsetPOC/force-app/main/default/objects/Request__c/fields/documentID__c.field-meta.xml
<CustomField>
    <fullName>documentID__c</fullName>
    <description>Document ID of the uploaded Document</description>
    <label>documentID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>