GearsetPOC/force-app/main/default/objects/Request__c/fields/editmode__c.field-meta.xml
<CustomField>
    <fullName>editmode__c</fullName>
    <description>editmode</description>
    <inlineHelpText>editmode</inlineHelpText>
    <label>editmode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>