GearsetPOC/force-app/main/default/objects/Request__c/fields/effectivedate__c.field-meta.xml
<CustomField>
    <fullName>effectivedate__c</fullName>
    <description>effectivedate</description>
    <inlineHelpText>effectivedate</inlineHelpText>
    <label>effectivedate</label>
    <type>Date</type>
</CustomField>