GearsetPOC/force-app/main/default/objects/Request__c/fields/engenddate__c.field-meta.xml
<CustomField>
    <fullName>engenddate__c</fullName>
    <description>engenddate</description>
    <inlineHelpText>engenddate</inlineHelpText>
    <label>engenddate</label>
    <type>Date</type>
</CustomField>