GearsetPOC/force-app/main/default/objects/Request__c/fields/engtype__c.field-meta.xml
<CustomField>
    <fullName>engtype__c</fullName>
    <label>engtype</label>
    <length>20</length>
    <type>Text</type>
</CustomField>