GearsetPOC/force-app/main/default/objects/Request__c/fields/exemptreason__c.field-meta.xml
<CustomField>
    <fullName>exemptreason__c</fullName>
    <description>exemptreason</description>
    <inlineHelpText>exemptreason</inlineHelpText>
    <label>exemptreason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charity - VAT Exempt</fullName>
            </value>
            <value>
                <fullName>Low Turnover VAT Exempt</fullName>
            </value>
            <value>
                <fullName>VAT Exempt goods or services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>