GearsetPOC/force-app/main/default/objects/Request__c/fields/extsuppname__c.field-meta.xml
<CustomField>
    <fullName>extsuppname__c</fullName>
    <description>Existing supplier name</description>
    <inlineHelpText>Existing supplier name</inlineHelpText>
    <label>extsuppname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>