GearsetPOC/force-app/main/default/objects/Request__c/fields/goodsdesc__c.field-meta.xml
<CustomField>
    <fullName>goodsdesc__c</fullName>
    <description>goods description</description>
    <inlineHelpText>goods description</inlineHelpText>
    <label>goodsdesc</label>
    <type>TextArea</type>
</CustomField>