GearsetPOC/force-app/main/default/objects/Request__c/fields/Invoice_file__c.field-meta.xml
<CustomField>
    <fullName>Invoice_file__c</fullName>
    <description>Invoice file</description>
    <label>Invoice_file</label>
    <length>200</length>
    <type>Text</type>
</CustomField>