GearsetPOC/force-app/main/default/objects/Request__c/fields/invoiceDocID__c.field-meta.xml
<CustomField>
    <fullName>invoiceDocID__c</fullName>
    <description>To save invoice doc id</description>
    <label>invoiceDocID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>