GearsetPOC/force-app/main/default/objects/Request__c/fields/isnovation__c.field-meta.xml
<CustomField>
    <fullName>isnovation__c</fullName>
    <description>Is novation?</description>
    <inlineHelpText>Is novation?</inlineHelpText>
    <label>isnovation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>