GearsetPOC/force-app/main/default/objects/Request__c/fields/isvat__c.field-meta.xml
<CustomField>
    <fullName>isvat__c</fullName>
    <description>Is VAT registered?</description>
    <inlineHelpText>Is VAT registered?</inlineHelpText>
    <label>isvat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>VAT Exempt</fullName>
            </value>
            <value>
                <fullName>Awaiting VAT registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>