GearsetPOC/force-app/main/default/objects/Request__c/fields/oraclesuppno__c.field-meta.xml
<CustomField>
    <fullName>oraclesuppno__c</fullName>
    <description>oraclesuppno</description>
    <inlineHelpText>oraclesuppno</inlineHelpText>
    <label>oraclesuppno</label>
    <length>20</length>
    <type>Text</type>
</CustomField>