GearsetPOC/force-app/main/default/objects/Request__c/fields/parent_company__c.field-meta.xml
<CustomField>
    <fullName>parent_company__c</fullName>
    <description>ParentCompany</description>
    <inlineHelpText>Parent Company</inlineHelpText>
    <label>parent_company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>