GearsetPOC/force-app/main/default/objects/Request__c/fields/payaddress1__c.field-meta.xml
<CustomField>
    <fullName>payaddress1__c</fullName>
    <description>Payment Address Line1</description>
    <label>payaddress1</label>
    <length>35</length>
    <type>Text</type>
</CustomField>