GearsetPOC/force-app/main/default/objects/Request__c/fields/payaddress2__c.field-meta.xml
<CustomField>
    <fullName>payaddress2__c</fullName>
    <description>Payment address line2</description>
    <label>payaddress2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>