GearsetPOC/force-app/main/default/objects/Request__c/fields/payaddress3__c.field-meta.xml
<CustomField>
    <fullName>payaddress3__c</fullName>
    <label>payaddress3</label>
    <length>35</length>
    <type>Text</type>
</CustomField>