GearsetPOC/force-app/main/default/objects/Request__c/fields/paycity__c.field-meta.xml
<CustomField>
    <fullName>paycity__c</fullName>
    <description>Payment City</description>
    <label>paycity</label>
    <length>35</length>
    <type>Text</type>
</CustomField>