GearsetPOC/force-app/main/default/objects/Request__c/fields/paymentterms__c.field-meta.xml
<CustomField>
    <fullName>paymentterms__c</fullName>
    <description>Payment Terms</description>
    <label>paymentterms</label>
    <length>30</length>
    <type>Text</type>
</CustomField>