GearsetPOC/force-app/main/default/objects/Request__c/fields/payphone__c.field-meta.xml
<CustomField>
    <fullName>payphone__c</fullName>
    <description>Pay phone</description>
    <inlineHelpText>Pay phone</inlineHelpText>
    <label>payphone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>