GearsetPOC/force-app/main/default/objects/Request__c/fields/payprovince__c.field-meta.xml
<CustomField>
    <fullName>payprovince__c</fullName>
    <description>Payment Province</description>
    <label>payprovince</label>
    <length>35</length>
    <type>Text</type>
</CustomField>