GearsetPOC/force-app/main/default/objects/Request__c/fields/payzip__c.field-meta.xml
<CustomField>
    <fullName>payzip__c</fullName>
    <description>Payment ZIp Code</description>
    <label>payzip</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>