GearsetPOC/force-app/main/default/objects/Request__c/fields/PONumber__c.field-meta.xml
<CustomField>
    <fullName>PONumber__c</fullName>
    <description>To store purchase order number</description>
    <label>PONumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>