GearsetPOC/force-app/main/default/objects/Request__c/fields/prevcompname__c.field-meta.xml
<CustomField>
    <fullName>prevcompname__c</fullName>
    <description>Previous company name</description>
    <inlineHelpText>Previous company name</inlineHelpText>
    <label>prevcompname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>