GearsetPOC/force-app/main/default/objects/Request__c/fields/prevcompreg__c.field-meta.xml
<CustomField>
    <fullName>prevcompreg__c</fullName>
    <description>Previous company reg no</description>
    <inlineHelpText>Previous company reg no</inlineHelpText>
    <label>prevcompreg</label>
    <length>50</length>
    <type>Text</type>
</CustomField>