GearsetPOC/force-app/main/default/objects/Request__c/fields/purchemail__c.field-meta.xml
<CustomField>
    <fullName>purchemail__c</fullName>
    <description>Purchase email</description>
    <inlineHelpText>Purchase email</inlineHelpText>
    <label>purchemail</label>
    <type>Email</type>
</CustomField>