GearsetPOC/force-app/main/default/objects/Request__c/fields/replacesupp__c.field-meta.xml
<CustomField>
    <fullName>replacesupp__c</fullName>
    <label>replacesupp</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>