GearsetPOC/force-app/main/default/objects/Request__c/fields/reqtype__c.field-meta.xml
<CustomField>
    <fullName>reqtype__c</fullName>
    <label>reqtype</label>
    <length>20</length>
    <type>Text</type>
</CustomField>