GearsetPOC/force-app/main/default/objects/Request__c/fields/siteaddress__c.field-meta.xml
<CustomField>
    <fullName>siteaddress__c</fullName>
    <description>Site address</description>
    <inlineHelpText>Site address</inlineHelpText>
    <label>siteaddress</label>
    <type>TextArea</type>
</CustomField>