GearsetPOC/force-app/main/default/objects/Request__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>Status</description>
    <inlineHelpText>Status</inlineHelpText>
    <label>status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>