GearsetPOC/force-app/main/default/objects/Request__c/fields/submitter__c.field-meta.xml
<CustomField>
    <fullName>submitter__c</fullName>
    <description>Submitter</description>
    <inlineHelpText>Submitter</inlineHelpText>
    <label>submitter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>