GearsetPOC/force-app/main/default/objects/Request__c/fields/suppselection__c.field-meta.xml
<CustomField>
    <fullName>suppselection__c</fullName>
    <label>suppselection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 Quotes</fullName>
                <default>true</default>
                <label>3 Quotes</label>
            </value>
            <value>
                <fullName>Full RFP/Tender Process</fullName>
            </value>
            <value>
                <fullName>Single Source</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>