GearsetPOC/force-app/main/default/objects/Request__c/fields/Total_Inv__c.field-meta.xml
<CustomField>
    <fullName>Total_Inv__c</fullName>
    <description>To store total invoice value</description>
    <label>Total_Inv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>