GearsetPOC/force-app/main/default/objects/Request__c/fields/vatregno__c.field-meta.xml
<CustomField>
    <fullName>vatregno__c</fullName>
    <label>vatregno</label>
    <length>30</length>
    <type>Text</type>
</CustomField>