GearsetPOC/force-app/main/default/objects/Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>submitter__c</columns>
    <columns>status__c</columns>
    <columns>customer_id__c</columns>
    <columns>reqtype__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>